# bazel_bug

main/: BUILD.bazel  bar.cpp  foo.cpp
